# kde-cli-tools

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  config-kde-cli-tools.h.cmake
doc/: CMakeLists.txt
doc/kcontrol5/: CMakeLists.txt
doc/kdesu/: CMakeLists.txt  index.docbook  man-kdesu.1.docbook
kbroadcastnotification/: CMakeLists.txt  Messages.sh  main.cpp
kcmshell/: CMakeLists.txt  Mainpage.dox  Messages.sh  main.cpp  main.h
kdeeject/: CMakeLists.txt  Makefile.am  kdeeject
kdeinhibit/: CMakeLists.txt  Messages.sh  main.cpp
kdeinhibit/completions/: kde-inhibit.zsh  kdeinhibit.zsh
kdesu/: CMakeLists.txt  ChangeLog  FAQ  LICENSE.readme  Makefile.am  Messages.sh  README  TODO  configure.in.in  kdesu.cpp  sudlg.cpp  sudlg.h
kdesu/common/: Makefile.am  client.cpp  client.h  debug.h  defaults.h  kcookie.cpp  kcookie.h  kdesu.h  kdesu_stub.c  kpassdlg.cpp  kpassdlg.h  pathsearch.cpp  pathsearch.h  process.cpp  process.h  pty.cpp  pty.h  ssh.cpp  ssh.h  su.cpp  su.h  xcookie.cpp  xcookie.h
kdesu/kcmkdesu/: Makefile.am  kcmkdesu.cpp  kcmkdesu.h
kdesu/kdessh/: Makefile.am  kdessh.cpp  sshdlg.cpp  sshdlg.h
kdesu/kdesu/: CMakeLists.txt  Makefile.am  Messages.sh  kdesu.cpp  kpassdlg.cpp  kpassdlg.h  sudlg.cpp  sudlg.h
kdesu/kdesud/: CMakeLists.txt  Makefile.am  Messages.sh  config-kdesud.h.cmake  handler.cpp  handler.h  kdesud.cpp  kdesud.h  lexer.cpp  lexer.h  repo.cpp  repo.h  secure.cpp  secure.h
kdesu/pics/: Makefile.am
keditfiletype/: CMakeLists.txt  Makefile.am  Messages.sh  control.cpp  extensiondlg.cpp  extensiondlg.h  filegroupdetails.cpp  filegroupdetails.h  filetypedetails.cpp  filetypedetails.h  filetypeembedcfg.h  filetypes.desktop  filetypesview.cpp  filetypesview.h  kcm_filetypes.desktop  kcm_filetypes.json  keditfiletype.cpp  keditfiletype.h  kservicelistwidget.cpp  kservicelistwidget.h  kserviceselectdlg.cpp  kserviceselectdlg.h  mimetypedata.cpp  mimetypedata.h  mimetypewriter.cpp  mimetypewriter.h  multiapplydialog.cpp  multiapplydialog.h  newtypedlg.cpp  newtypedlg.h  org.kde.keditfiletype.desktop  typeslistitem.cpp  typeslistitem.h  typeslistitembase.cpp  typeslistitembase.h  typeslistproxyitem.cpp  typeslistproxyitem.h  typeslisttreewidget.cpp  typeslisttreewidget.h
keditfiletype/tests/: CMakeLists.txt  filetypestest.cpp
kinfo/: CMakeLists.txt  kinfo
kioclient/: CMakeLists.txt  Messages.sh  kioclient.cpp  kioclient.h  urlinfo.h
kmimetypefinder/: CMakeLists.txt  Messages.sh  kmimetypefinder.cpp
kreadconfig/: CMakeLists.txt  Makefile.am  Messages.sh  kreadconfig.cpp  kwriteconfig.cpp
kstart/: CHANGES  CMakeLists.txt  LICENSE.readme  Makefile.am  Messages.sh  README  kstart.C  kstart.cpp  kstart.h  version.h
ksvgtopng/: CMakeLists.txt  ksvgtopng.cpp
ktraderclient/: CMakeLists.txt  Messages.sh  ktraderclient.cpp
plasma-open-settings/: CMakeLists.txt  Messages.sh  main.cpp  org.kde.plasma.settings.open.desktop
po/af/: kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kdesu.po  kdesu5.po  kstart.po  kstart5.po
po/ar/: kbroadcastnotification.po  kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kde-inhibit.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po  plasma-open-settings.po
po/ast/: kbroadcastnotification.po  kcm5_filetypes.po  kcm_filetypes.po  kde-inhibit.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po  plasma-open-settings.po
po/az/: kbroadcastnotification.po  kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po  plasma-open-settings.po
po/be/: kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po
po/be@latin/: kcm5_filetypes.po  kcm_filetypes.po  kdesu.po  kdesu5.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po
po/bg/: kbroadcastnotification.po  kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kde-inhibit.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po  plasma-open-settings.po
po/bn/: kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kstart.po  kstart5.po
po/bn_IN/: kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po
po/br/: kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kdesu.po  kdesu5.po  kstart.po  kstart5.po
po/bs/: kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po
po/ca/: kbroadcastnotification.po  kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kde-inhibit.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po  plasma-open-settings.po
po/ca@valencia/: kbroadcastnotification.po  kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kde-inhibit.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po  plasma-open-settings.po
po/cs/: kbroadcastnotification.po  kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kde-inhibit.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po  plasma-open-settings.po
po/csb/: kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  ktraderclient5.po
po/cy/: kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kdesu.po  kdesu5.po  kstart.po  kstart5.po
po/da/: kbroadcastnotification.po  kcm5_filetypes.po  kcm_filetypes.po  kcmshell5.po  kdesu.po  kdesu5.po  kioclient.po  kmimetypefinder.po  kmimetypefinder5.po  kstart.po  kstart5.po  (+1 more)
(+989 files in other folders)
